tests/cases/loops/errors/err_for_missing_let.aipl
fn f() -> i64 { for (c : "x") { 0 } 0 }
--- errors ---
error: unexpected 'c'; expected 'let'
 --> ./tests/cases/loops/errors/err_for_missing_let.aipl:1:22
  |
1 | fn f() -> i64 { for (c : "x") { 0 } 0 }
  |                      ^
